kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: wonderland
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - name: http
      port: 8089
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: wonderland
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: auth-service
  ports:
    - name: http
      port: 4001
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: wonderland
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: user-service
  ports:
    - name: http
      port: 4002
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: business-service
  namespace: wonderland
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: business-service
  ports:
    - name: http
      port: 4003
      targetPort: http
